lib/src/compiler/tests/testdata/errors/5.out
error[E100]: wrong type
 --> line:2:19
  |
2 |   condition: 1 + -"1" == 0
  |                   ^^^ expression should be `float` or `integer`, but is `string`
  |